1. Метод .of [#512617]